[package]
name = "raspberry-tracker"
version = "0.1.0"
authors = ["James Nichols < jtylernichols@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { version = "0.16.1", features = ["native-tls"] }
egui = "0.16.1"
eframe = "0.16.0"
ureq = { version = "2.4.0", features = ["json"] }
sqlite = "0.26.0"
tokio = { version = "1", features = ["full"] }
num_enum = "0.5"
serde_json = "1.0"
directories-next = "2"
