[package]
name = "raspberry-tracker"
version = "0.2.0"
authors = ["James Nichols < jtylernichols@gmail.com>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
#egui = "0.17"
#eframe = "0.17"
#epi = "0.17"
ureq = { version = "2.4.0", features = ["json"] }
tokio = { version = "1", features = ["full"] }
num_enum = "0.5"
serde_json = "1.0"
directories-next = "2"
url = "2"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "sqlite" ] }
image = "0.24"
time = { version = "0.3", features = [ "std", "formatting", "parsing", "macros", "local-offset"] }
time-tz = { version = "0.4", features = [ "system" ] }
egui = { git = "https://github.com/jnichols-pdx/egui/" , branch = "dynamic-grid-colored" }
egui_glow = { git = "https://github.com/jnichols-pdx/egui/" , branch = "dynamic-grid-colored" }
eframe = { git = "https://github.com/jnichols-pdx/egui/" , branch = "dynamic-grid-colored"}
epi = { git = "https://github.com/jnichols-pdx/egui/" , branch = "dynamic-grid-colored"}
egui_extras = { git = "https://github.com/jnichols-pdx/egui/" , branch = "dynamic-grid-colored"}
