[package]
name = "raspberry-tracker"
version = "0.5.0"
authors = ["James Nichols <jtylernichols@gmail.com>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
ureq = { version = "2.4.0", features = ["json"] }
tokio = { version = "1", features = ["full"] }
#pinning num_enum at last working build, version 0.5.9 broke the FromPrimitive trait.
num_enum = "=0.5.7"
num_enum_derive = "=0.5.7"
serde_json = "1.0"
directories-next = "2"
url = "2"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "sqlite" ] }
image = "0.24"
time = { version = "0.3", features = [ "std", "formatting", "parsing", "macros", "local-offset"] }
time-tz = { version = "0.5", features = [ "system" ] }
#egui = { git = "https://github.com/jnichols-pdx/egui/" , branch = "colored-table"}
#egui_glow = { git = "https://github.com/jnichols-pdx/egui/" , branch = "colored-table" }
#eframe = { git = "https://github.com/jnichols-pdx/egui/" , branch = "colored-table", features = ["default", "persistence"] }
#egui_extras = { git = "https://github.com/jnichols-pdx/egui/" , branch = "colored-table"}
egui = { git = "https://github.com/jnichols-pdx/egui/" , branch = "colored-table-ahash-7"}
egui_glow = { git = "https://github.com/jnichols-pdx/egui/" , branch = "colored-table-ahash-7" }
eframe = { git = "https://github.com/jnichols-pdx/egui/" , branch = "colored-table-ahash-7", features = ["default", "persistence"] }
egui_extras = { git = "https://github.com/jnichols-pdx/egui/" , branch = "colored-table-ahash-7"}
#egui = { path = "/usr/src/egui/crates/egui" }
#egui_glow = { path = "/usr/src/egui/crates/egui_glow" }
#eframe = { path = "/usr/src/egui/crates/eframe", features = ["default", "persistence"] }
#egui_extras = { path = "/usr/src/egui/crates/egui_extras" }
rodio = "0.15.0"
bytes = "1.1"
base64 = "0.13"
rand = "0.8"
rfd = "0.8"
ctrlc = "3"
